# contratopublico

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  docker-compose-dev.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-02c53650e4e795c3463b7946038ee0742b8f219b282c4bea226894e05cbe50d6.json  query-0d731a40e805c9080d8b679794d470b439a83b9d3c257590c8bbda2c2a952446.json  query-11ad7e93e727da59500f694ce830b4b8c926549156ab098acffd1b342b9508f5.json  query-1bd6fb96e747b293452732a71b406655e4b8dbd056f885e6c6ca16949a53e6dd.json  query-1e4f0c474fe3d0c92e7f7bc521d7148b44bbc5bd173a36f177bc19bdc0868d76.json  query-25868ab0a660827a547850931ebf37b0f61bbf228def653e2658854d1bd2d578.json  query-31bdac73aa213e6a39048cdaa7198c7a387657a106eada92fa67b8db727da9e8.json  query-349083bbd9b6d04f81fa2757712babcba38524ac08ffbe14ae63cdf000f2d94e.json  query-349a018b0378f0337933dcf86a85c42f7f6d3671b1579a09664d8cf3e3d080db.json  query-34d415a8c28d70d2863896d610283157bc694f1ed3e9b890e03920f204f4a8ac.json  query-380a38a0543c2099b7297243865bcfaa2fa758000448ddc3d426c2507a11fc7f.json  query-3d5b2a4bc8df9df02771b2264203dad859d114bf098ad5fe0291d129353b7918.json  query-4cad59049b0c13b8fbb89b225f8e556ef6d3cadc753abad1d57c6811cfbaa368.json  query-4de55bb46d77d23c6e31c622b13c2c443e817389cdb4f0ca72ed05daeb0a8bab.json  query-50ba26f6e73cce67b0b08156c3fecb2378ffd99e5851a2d7847557eb64913ea3.json  query-57392a4ba79612ce8a5d582ce983727451f35dee0df48dbbd49ebc2b54ecbecc.json  query-59e2a113bc99307675c02596f57e065cdd2a737a29549ccaf0df9ce1f2ae4249.json  query-5ccfefa6e3979839031c3d5da29b65a1d88c7332460cdbfe3b463fa61794aa45.json  query-604908e9c526e031be470871ba90f89497dd34710bdc0878240a07839a934544.json  query-61c7ff3de843b3cacbfaf70e733dc64d25aa3e10dffb4f83c92b755b917301a8.json  query-6885c83ffa6681699cc71919ac397c378fa138683206eec653e4a5142adddda2.json  query-72a11ee101f781e53fabb3e22c9df11521392802a496503226788978481f1b9c.json  query-7e37dbe44f89cc974b2e92cfc2c152324b0e3b2b671301b30c3a6c2bac559720.json  query-9ab03bdd6a699a4d3c4cf1a22e67b82aea894cbc80dff442babe3539b0986982.json  query-ab54b97a20dab1591c624384be745c9c533de87eb351cdf339c05a19324b43c5.json  query-bb1e2b49e93db6f7e18a0e61e8bfcc571ea47ca200f62d9e2cec707d7b21764b.json  query-c6c65057b04415536ceae6c35ea8d1a8a3cfd0afa7a3921d5b04f9a52ccc4129.json  query-de36d28fe76db597c5606f209dfc20eee52884a04ab258dfd9d69d9fceade311.json  query-e0b2838a2a4f2f48b3c6f0cb26c503f93d42962d30f038a302dddbae9007c6b5.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  extractors.rs  filter.rs  main.rs  metrics.rs  rate_limit.rs  router.rs  search.rs  sort.rs  state.rs  statistics.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: db.rs  lib.rs  searchdb.rs  statistics.rs
backend/crates/scraper/: Cargo.toml
backend/crates/scraper/src/: config.rs  export.rs  lib.rs  migrate.rs  scraper.rs
backend/crates/scraper/src/base_gov/: client.rs  de.rs  mod.rs
backend/crates/scraper/src/search/: rebuild.rs
backend/crates/scraper/src/store/: db.rs  file.rs  meilisearch.rs  mod.rs  rangeset.rs
backend/migrations/: 20251004211142_create_tables.sql  20251019142520_materialized_contract_daily_view.sql  20260324194931_contract_location.sql
backend/src/: main.rs  search.rs  sort.rs  state.rs
common/: Cargo.toml
common/src/: lib.rs
docker/: .env.example  compose-cftunnels.yml  compose-meilisearch.yml  compose.cftunnels.yml  compose.dev.yml  compose.yml  docker-compose-cftunnels.yml  docker-compose-dev.yml  docker-compose-meilisearch.yml  docker-compose.yml  warp-rotate.sh
frontend/: .dockerignore  .prettierrc  Dockerfile  package-lock.json  package.json  svelte.config.js  svelte.config.ts  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts  tailwind.config.js
frontend/src/components/: ContractCard.svelte  ContractCardInfoRow.svelte  ContractCpvPopover.svelte  ContractNifDescriptionPopover.svelte  ContractPagination.svelte  ContractPlacePopover.svelte  ContractPrice.svelte  ContractProcedureTypeBadge.svelte  ContractsFound.svelte  DarkModeToggle.svelte  ErrorDisplay.svelte  Footer.svelte  (+8 more)
monitoring/bench/: api-test.js
monitoring/prometheus/: prometheus.yml
rpxy/config/: config.toml
scraper/: Cargo.toml
scraper/src/: base_gov.rs  importer.rs  lib.rs  main.rs  scraper.rs  store.rs
src/: base_gov.rs  main.rs  store.rs
(+71 files in other folders)
