[workspace]
resolver = "3"

members = ["backend", "common", "scraper"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
tracing-subscriber = { version = "0.3.19", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
governor = "0.10.0"
log = "0.4.27"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
meilisearch-sdk = "0.28.0"
thiserror = "2.0.12"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.40"
