[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
meilisearch-sdk = { workspace = true }
common = { path = "../common" }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
