[workspace]
resolver = "3"

members = ["crates/api", "crates/common", "crates/scraper"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full", "tracing"] }
axum = "0.8.4"
tracing-subscriber = { version = "0.3.19", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
governor = "0.10.0"
log = "0.4.27"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.20", features = ["json", "socks"] }
serde_json = "1.0.140"
meilisearch-sdk = "0.28.0"
thiserror = "2.0.17"
clap = { version = "4.5.41", features = ["derive", "env"] }
tracing = "0.1.40"
ringbuffer = "0.16.0"
metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15", default-features = false }
itertools = "0.14.0"
num-traits = "0.2.19"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
