[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
meilisearch-sdk = { workspace = true }
common = { path = "../common" }
scraper = { path = "../scraper" }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
metrics = { workspace = true, default-features = false }
metrics-exporter-prometheus = { workspace = true, default-features = false }
tower-http = { version = "0.5", features = ["compression-gzip", "limit", "cors"] }
